<resources>
    <string name="app_name">FitQuest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="item">Item</string>
    <string name="workout">Workout</string>
    <string name="profile">Profile</string>
    <string name="WorkoutPage">Workout page here</string>
    <string name="LoginPage">Login Page Here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back button</string>
    <string name="ProfileTitle">Account</string>
    <string name="ProfileImageDesc">This is your profile image</string>
    <string name="goals">Goals</string>
    <string name="my_body">My Body</string>
    <string name="logout">Logout</string>

    //Terence
    <string name="register_hello1">Hey There,</string>
    <string name="register_hello2">Create an Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="term_of_use">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="register">Register</string>
    <string name="to_login">Already have an account? Login</string>
    <string name="login_hello2">Welcome Back</string>
    <string name="forget_password">Forget Your Password?</string>
    <string name="login">Login</string>
    <string name="to_register">Don’t have an account yet? Register</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <string name="HomeTitle">Welcome Back,</string>
    <string name="BMI_Text">BMI (Body Mass Index)</string>
    <string name="BMI_DefaultStatus">You have a normal weight</string>
    <string name="BMI_UnderStatus">You are underweight</string>
    <string name="BMI_OverStatus">You are overweight</string>

    <string name="BMI_ViewMore">View More</string>
    <string name="recommendedOptionTitle">Recommended</string>
    <string name="recommendedOptionInfo">Start exercising using our plan. Suitable for beginner.</string>

    <string name="about">About You</string>
    <string name="about_desc">What\'s your deal? Tell us a bit about yourself</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    /SecondStep
    <string name="age">What is your age?</string>
    <string name="age_desc">How many trips around the sun have you made? Let us know your age.</string>
    <string name="age_enter">Enter your age:</string>

    //ThirdStep
    <string name="weight">What is your weight?</string>
    <string name="weight_desc">How much do you weigh? \n
        Don\'t Worry, we won\'t tell anyone</string>
    <string name="enter_weight">Enter your weight (KG):</string>

    //FourthStep
    <string name="height">What is your height?</string>
    <string name="height_desc">How tall are you? \n
        Stand up straight and measure your height in centimeters.</string>
    <string name="enter_height">Enter Height (CM):</string>

    //FifthStep
    <string name="goal">What is your workout goal?</string>
    <string name="goal_desc">Tell us your aim for your fitness journey </string>

    <string name="goal1">Weight Loss</string>
    <string name="goal2">Muscle Gain</string>
    <string name="goal3">Flexibility and Mobility</string>
    <string name="goal4">Improve Cardiovascular Health</string>
    <string name="goal5">Stress Reduction</string>

    //SixthStep
    <string name="level">What is your workout level?</string>
    <string name="level_desc">How skilled are you in the gym?\n
        Pick your proficiency level</string>
    <string name="level_1">Beginner</string>
    <string name="level_2">Intermediate</string>
    <string name="level_3">Advanced</string>


    //Button Strings
    <string name="next">Next</string>
    <string name="back">Return to previous page</string>
    <string name="complete">Congratulations, you are all set!</string>

    <string name="title_preset">Choose Your Preset Routine</string>
    <string name="routine_1">Arms</string>
    <string name="routine_2">Chest</string>
    <string name="routine_3">Abdominal</string>
    <string name="routine_4">Legs</string>
    <string name="routine_5">Full Body</string>

    //Goals Page
    <string name="new_goal">Your New Workout Goal:</string>
    <string name="change_goal">Change</string>
    <string name="current_goal">Your current workout goal:</string>


    //Body Page
    <string name="previous_info">Your Previous Body Information</string>
    <string name="previous_weight">Your Previous Weight</string>
    <string name="previous_height">Your Previous Height</string>
    <string name="enter_current_weight">Enter Your Current Weight</string>
    <string name="enter_current_height">Enter Your Current Height</string>
</resources>