<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        android:visible="false" />

    <item
        android:id="@+id/workout_ChooseMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/workout" />
    <item
        android:id="@+id/navigation_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        android:visible="false" />
    <item
        android:id="@+id/profilePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/outline_account_circle_24"
        android:title="@string/profile" />

</menu>