<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserInfo.goalPage">

    <RadioGroup
        android:id="@+id/RadioGroupGoal"
        android:layout_width="255dp"
        android:layout_height="257dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentGoalShow">


        <RadioButton
            android:id="@+id/radioButtonWeightLoss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/goal1"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/radioButtonMuscleGain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/goal2"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/radioButtonFlexMobility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/goal3"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/radioButtonCardioHealth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/goal4"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/radioButtonStress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/goal5"
            android:textSize="16sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/textViewCurrentGoalShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/alata"
        android:text="@string/new_goal"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button


        android:id="@+id/buttonBackBody"


        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="src_over"
        android:contentDescription="@string/back_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textAlignment="center"
        android:translationX="10dp"
        app:cornerRadius="100dp"
        app:icon="@drawable/outline_arrow_back_ios_new_24"
        app:iconPadding="8dp"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#000000"
        app:strokeWidth="1dp" />


    <Button
        android:id="@+id/buttonChangeGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/change_goal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/current_goal"
        app:layout_constraintEnd_toEndOf="@+id/RadioGroupGoal"
        app:layout_constraintStart_toStartOf="@+id/RadioGroupGoal"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupGoal" />
</androidx.constraintlayout.widget.ConstraintLayout>
